# CppToolkit

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh  dependency.bat  dependency.sh  vcpkg.json
Database/: CMakeLists.txt  Database.h  PostgresDB.cpp  PostgresDB.h
Network/: CMakeLists.txt  ConnectConditions.h  ConnectionJob.cpp  ConnectionJob.h  DataHandler.cpp  DataHandler.h  DataModes.h  FileManager.cpp  FileManager.h  FileSendingJob.cpp  FileSendingJob.h  NetworkClient.cpp  NetworkClient.h  NetworkConstexpr.h  NetworkServer.cpp  NetworkServer.h  NetworkSession.cpp  NetworkSession.h  README.md  ReceivingJob.cpp  ReceivingJob.h  SendingJob.cpp  SendingJob.h
Samples/: CMakeLists.txt
Samples/DatabaseSample/: CMakeLists.txt  DatabaseSample.cpp
Samples/FolderCompressionSample/: CMakeLists.txt  FolderCompressionSample.cpp
Samples/FolderWatcherSample/: CMakeLists.txt  FolderWatcherSample.cpp
Samples/NetworkClientSample/: CMakeLists.txt  NetworkClientSample.cpp
Samples/NetworkServerSample/: CMakeLists.txt  NetworkServerSample.cpp
Samples/ThreadSample/: CMakeLists.txt  ThreadSample.cpp
ThreadPool/: CMakeLists.txt  Job.cpp  JobPool.cpp  JobPriorities.cpp  README.md  ThreadPool.cpp  ThreadWorker.cpp
Utilities/: ArgumentParser.cpp  CMakeLists.txt  Compressor.cpp  Converter.cpp  Converter.h  Encryptor.cpp  Encryptor.h  File.cpp  Generator.cpp  JsonTool.cpp  JsonTool.h  Log.cpp  Logger.cpp  README.md  SystemInformation.cpp  SystemInformation.h
